# efficient_absolute

./: .gitignore  .text_oxford_dataset.py.swp  CMakeLists.txt  README.md  text_oxford_dataset.py
oxford_data/corridor/2D/: README-2D  bt.000.corners  bt.000.lines  bt.001.corners  bt.001.lines  bt.002.corners  bt.002.lines  bt.003.corners  bt.003.lines  bt.004.corners  bt.004.lines  bt.005.corners  bt.005.lines  bt.006.corners  bt.006.lines  bt.007.corners  bt.007.lines  bt.008.corners  bt.008.lines  bt.009.corners  bt.009.lines  bt.010.corners  bt.010.lines  bt.nview-corners  bt.nview-lines
oxford_data/corridor/3D/: README-3D  bt.000.P  bt.001.P  bt.002.P  bt.003.P  bt.004.P  bt.005.P  bt.006.P  bt.007.P  bt.008.P  bt.009.P  bt.010.P  bt.l3d  bt.p3d
oxford_data/merton1/2D/: 001.P  001.corners  001.lines  002.P  002.corners  002.lines  003.P  003.corners  003.lines  nview-corners  nview-lines
oxford_data/merton1/3D/: l3d  p3d
oxford_data/merton2/2D/: 001.P  001.corners  001.lines  002.P  002.corners  002.lines  003.P  003.corners  003.lines  nview-corners  nview-lines
oxford_data/merton2/3D/: l3d  p3d
oxford_data/merton3/2D/: 001.P  001.corners  001.lines  002.P  003.P  (+6 more)
oxford_data/model_house/: reconstruction.wrl
src/: CMakeLists.txt  camera_pose.h  p1p2ll.cc  p1p2ll_modified.cc  p1p2ll_q3q.cc  p2p1ll.cc  p2p1ll_bouaziz.cc  p2p1ll_lu_bouaziz.cc  p2p1ll_modified.cc  p2p1ll_q3q.cc  pybind_ransac.cpp  re3q3.cc  solver_2q2_full.cpp  test_1p2l.cpp  test_1p2l_coplanar.cpp  test_2p1l.cpp  test_2p1l_coplanar.cpp  univariate.cc  univariate.h
src/pybind11/: setup.py
(+67 files in other folders)
